frontend/src/styles.css
/* ### VARIABLES ### */
:root {
  /* dark */
  --dark-blue: #161638;
  --navy-blue: #18206f;
  --light-navy-blue: #1d2785;
  --matt-blue: #1b435e;
  --light-blue: #3d82a7;
  --light-purp: #563457;
  --dark-purp: #302442;
  --grey: #cbcbd4;
  --light-grey: #e8e8f0;
  --gold: #d4af37;

  /* light */
  --yellow: #ffed00;
  --yellow-orange: #f8b405;
  --orange: #f17a0a;
  --light-red: #ea400f;
  --dark-red: #e30613;
}

/* ### DEFAULTS ### */
* {
  box-sizing: border-box;
}
html,
body {
  font-size: 16px;
  scroll-behavior: smooth;
}
body {
  margin: 0;
  width: 100%;
  height: 100%;
  background-color: var(--light-navy-blue);
  color: var(--grey);
  font-family: "Franklin Gothic Medium", "Roboto", Arial, sans-serif;
}
hr {
  width: 100%;
}
h1,
h2,
h3,
h4 {
  text-align: center;
}
p {
  font-size: 18px;
}

/* ### GENERAL ### */

/* LINK STYLE */
a {
  text-decoration: none;
  font-size: 1.3rem;
}
a:link {
  color: var(--gold);
}
a:hover {
  color: var(--light-red);
}
a:active {
  color: var(--dark-red);
}
a:visited {
  color: var(--gold);
}

/* CLASSES */
.clearfix {
  content: "";
  display: block;
  clear: both;
}
.centered {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.bordered {
  border: 2px solid var(--grey);
  border-radius: 8px;
  padding: 0.25rem;
}
.custom-wrapper {
  width: 90%;
  height: fit-content;
  padding: 2%;
  margin: 2%;
}
.btn {
  background-color: var(--navy-blue);
  color: var(--grey);

  font-size: 1.1rem;
  font-weight: bold;

  margin: 2%;

  border: 2px solid var(--grey);
  border-radius: 8px;
}
.btn:hover {
  background-color: var(--light-blue);
  color: white;
}
.btn-box {
  display: flex;
  justify-content: space-evenly;
  margin: 0.5rem 0 0.5rem 0;
}
.float-left {
  float: left;
}
.float-right {
  float: right;
}

/* ### GRID-SYSTEM ### */
.row {
  height: fit-content;
  flex-direction: row;
}
.row::after {
  content: "";
  clear: both;
  display: block;
}

.col-100 {
  width: 100%;
}
.col-66 {
  width: 66.666%;
}
.col-50 {
  width: 50%;
}
.col-33 {
  width: 33.333%;
}
.col-20 {
  width: 20%;
}

.wrapper [class*="col-"] {
  float: left;
  min-height: 1px;
  padding: 0.8rem;
}

/*### MEDIA-QUERIES ###*/

@media (min-width: 370px) {
  .col-50 input {
    width: 20ch;
  }
}

@media (min-width: 500px) {
  .custom-wrapper {
    width: 80%;
  }
}

@media (min-width: 768px) {
  .custom-wrapper {
    width: 80%;
  }

  video {
    max-width: 50%;
  }

  .col-50 input {
    font-size: 1.2rem;
    width: fit-content;
  }

  #contact-form {
    width: 60%;
  }
}

@media (min-width: 1024px) {
  .custom-wrapper {
    width: 60%;
    padding: 2%;
  }

  .col-50 input {
    font-size: 1rem;
  }

  #contact-form {
    width: 50%;
  }
}

@media (min-width: 1400px) {
  body {
    font-size: 1.1rem;
  }

  .custom-wrapper {
    width: 50%;
  }

  #contact-form {
    width: 40%;
  }
}

@media (min-width: 1600px) {
  .custom-wrapper {
    width: 40%;
  }

  #contact-form {
    width: 30%;
  }
}

